# fastelt

./: .gitignore  404.html  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/app/: index.html
api/filesystem-source/: index.html
api/rest-api-source/: index.html
api/source/: index.html
api/types/: index.html
docs/: index.md
docs/api/: app.md  config.md  destination.md  filesystem-source.md  records.md  rest-api-source.md  source.md  types.md
docs/examples/: custom-source-mlflow.md  parent-child-github.md
docs/getting-started/: installation.md  quickstart.md  why-fastelt.md
docs/guide/: bigger-applications.md  built-in-plugins.md  cli.md  extractors.md  filesystem.md  loaders.md  rest-api.md  sources.md  validation.md
example/: custom_pipeline.py  fastelt_app.py  github_bigquery.py  github_rest_api.py  pokemon_rest_api.py  source_pipeline.py  users.csv
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/why-fastelt/: index.html
guide/cli/: index.html
guide/filesystem/: index.html
guide/rest-api/: index.html
guide/sources/: index.html
guide/validation/: index.html
src/fastelt/: __init__.py  _utils.py  app.py  config.py  destinations.py  extractor.py  incremental.py  loader.py  pipeline.py  rest_api.py  state.py  types.py
src/fastelt/cli/: main.py
src/fastelt/destinations/: __init__.py  base.py  bigquery.py  duckdb.py  filesystem.py
src/fastelt/extractors/: csv.py  json.py  parquet.py
src/fastelt/loaders/: csv.py  json.py  parquet.py
src/fastelt/sources/: __init__.py  filesystem.py  rest_api.py  types.py
tests/: test_app.py  test_extractors.py  test_filesystem_source.py  test_incremental.py  test_loaders.py  test_pipeline.py  test_source.py  test_source_routing.py  test_validation.py
