[project]
name = "fastelt"
version = "0.2.0"
description = "A FastAPI-inspired wrapper around dlt for ELT pipelines"
requires-python = ">=3.9"
dependencies = [
    "dlt[duckdb]>=1.0",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
cli = ["typer>=0.9"]
rest_api = ["dlt[rest_api]>=1.0"]
parquet = ["pyarrow"]
dev = ["pytest>=7.0", "duckdb"]
docs = ["zensical"]

[project.scripts]
fastelt = "fastelt.cli.main:cli_app"

[build-system]
requires = ["uv_build>=0.7,<1"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
